# websocket_ipc

./: .gitignore  Cargo.toml  README.md
examples/: handler_message_decoder.rs  receive_stream1.rs  send_stream.rs
src/: lib.rs  main.rs  payload_decoder.rs
src/model/: handler_client_message.rs  mod.rs  request_payload.rs  task_type.rs
web/: index.html  payload.js  websocket-sdk.js
